Colaboratory를 통해 생성됨

--- a/EXE221031_3.ipynb
+++ b/EXE221031_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMkXDG/sBfgb+csJZDpU12F",
+      "authorship_tag": "ABX9TyOZM6LXTNPPbTLcK/td72Si",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -244,21 +244,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "mass = float(input(\"물체의 무게를 입력하시오(킬로그램): \"))\n",
+        "velocity = float(input(\"물체의 속도를 입력하시오(미터/초):\"))\n",
+        "\n",
+        "energy = 0.5 * mass * velocity **2\n",
+        "print(\"물체는 \" + str(energy) + \" (줄)의 에너지를 가지고 있다.\")"
+      ],
       "metadata": {
-        "id": "OR_VyyOELAZs"
+        "id": "OR_VyyOELAZs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1c25395e-5611-448a-c8fc-096143cf0e26"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "jyT6IJgd2cqs"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "물체의 무게를 입력하시오(킬로그램): 10\n",
+            "물체의 속도를 입력하시오(미터/초):100\n",
+            "물체는 50000.0 (줄)의 에너지를 가지고 있다.\n"
+          ]
+        }
+      ]
     }
   ]
 }
